# EasyEat

./: .env  .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js
core/: settings.py  urls.py
homepages/: urls.py  views.py
homepages/templates/homepages/: index.html
templates/shared/: flash.html  layout.html  navbar.html
users/: urls.py  views.py
users/templates/users/: login.html  register.html
